IngressAndServices/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-site-deployment
  labels:
    app: nginx-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-site
  template:
    metadata:
      labels:
        app: nginx-site
    spec:
      containers:
      - name: nginx-site
        image: kokofish/techmonkeys:0.0.1
        ports:
        - containerPort: 80
