IngressAndServices/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-site-service
  labels:
    app: nginx-site
spec:
  selector:
    app: nginx-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
